更正（說書生童書）

--- a/life1.html
+++ b/life1.html
@@ -20,7 +20,7 @@
                 <a href="yearsold.html">適齡推薦</a>
             </li>
             <li>
-                <a href="bookmap.html">自製童書</a>
+                <a href="bookmap.html">說書生</a>
             </li>
             <li style="border-radius:  0 30px 30px 0 ;">
                 <a href="aboutus.html">關於我們</a>
@@ -32,7 +32,7 @@
             <div class="second"><img src="images/我是一棵櫻花樹.png" alt=""></div>ˋ
             <div class="thrid">
                 <div>
-                    <p style="font-size:60px; ">我是一棵櫻花樹</p>
+                    <p style="font-size:40px; ">我是一棵櫻花樹</p>
                     <p>出版社:遠流出版事業股份有限公司</p>
                     <p> 作者:長谷川攝子</p>
                 </div>
