--- a/bookmap.html
+++ b/bookmap.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/logo_short icon.png">
-    <title>自製童書</title>
+    <title>說書生</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
                 <a href="yearsold.html">適齡推薦</a>
             </li>
             <li>
-                <a href="bookmap.html">自製童書</a>
+                <a href="bookmap.html">說書生</a>
             </li>
             <li style="border-radius:  0 30px 30px 0 ;">
                 <a href="aboutus.html">關於我們</a>
