--- a/know_page1.html
+++ b/know_page1.html
@@ -20,7 +20,7 @@
                 <a href="yearsold.html">適齡推薦</a>
             </li>
             <li>
-                <a href="bookmap.html">自製童書</a>
+                <a href="bookmap.html">說書生</a>
             </li>
             <li style="border-radius:  0 30px 30px 0 ;">
                 <a href="aboutus.html">關於我們</a>
@@ -34,8 +34,8 @@
         	<a href="know1.html"><img src="images/高麗菜.png" alt="" style="margin-top: 20px"></a>
         	<a href="know2.html"><img src="images/喔，原來如此.png" alt=""></a>
         	<a href="know3.html"><img src="images/哇.jpeg" alt=""></a>
-        	<a href="know4.html"><img src="images/fruit.jpeg" alt="" style="margin-bottom: 90px"></a>
-        	<ul>
+        	<a href="know4.html"><img src="images/fruit.jpeg" alt="" style="margin-bottom: 40px"></a>
+        	<ul style="margin-left: 40px;">
         		<li><a href="">1</a></li>
         		<li><a href="know_page2.html">2</a></li>
         		<!-- <li><a href="">3</a></li> -->
