--- a/know_page2.html
+++ b/know_page2.html
@@ -20,7 +20,7 @@
                 <a href="yearsold.html">適齡推薦</a>
             </li>
             <li>
-                <a href="bookmap.html">自製童書</a>
+                <a href="bookmap.html">說書生</a>
             </li>
             <li style="border-radius:  0 30px 30px 0 ;">
                 <a href="aboutus.html">關於我們</a>
@@ -34,8 +34,8 @@
         	<a href="know5.html"><img src="images/vehi.jpeg" alt="" style="margin-top: 20px"></a>
         	<a href="know6.html"><img src="images/人人都需要一顆石頭.png" alt=""></a>
         	<a href="know7.html"><img src="images/艾瑞卡爾好朋友.png" alt=""></a>
-        	<a href="magic1.html"><img src="images/爺爺的神秘菜園.png" alt="" style="margin-bottom: 90px"></a>
-        	<ul>
+        	<a href="magic1.html"><img src="images/爺爺的神秘菜園.png" alt="" style="margin-bottom: 40px"></a>
+        	<ul style="margin-left: 40px">
         		<li><a href="know_page1.html">1</a></li>
         		<li><a href="">2</a></li>
         	</ul>
