--- a/life_page2.html
+++ b/life_page2.html
@@ -20,7 +20,7 @@
                 <a href="yearsold.html">適齡推薦</a>
             </li>
             <li>
-                <a href="bookmap.html">自製童書</a>
+                <a href="bookmap.html">說書生</a>
             </li>
             <li style="border-radius:  0 30px 30px 0 ;">
                 <a href="aboutus.html">關於我們</a>
@@ -34,7 +34,7 @@
             <a href="life5.html"><img src="images/明天.png" alt="" style="margin-top: 20px"></a>
             <a href="life6.html"><img src="images/待會見 我們.png" alt=""></a>
             <a href="life7.html"><img src="images/逛商店街.jpeg" alt=""></a>
-            <a href="life8.html"><img src="images/媽媽的魔法包.png" alt="" style="margin-bottom: 90px"></a>
+            <a href="life8.html"><img src="images/媽媽的魔法包.png" alt="" style="margin-bottom: 40px"></a>
             <ul>
                 <li><a href="life_page1.html">1</a></li>
                 <li><a href="life_page2.html">2</a></li>
