--- a/life_page3.html
+++ b/life_page3.html
@@ -20,7 +20,7 @@
                 <a href="yearsold.html">適齡推薦</a>
             </li>
             <li>
-                <a href="bookmap.html">自製童書</a>
+                <a href="bookmap.html">說書生</a>
             </li>
             <li style="border-radius:  0 30px 30px 0 ;">
                 <a href="aboutus.html">關於我們</a>
@@ -34,7 +34,7 @@
             <a href="life9.html"><img src="images/阿文的媽媽噴火了.png" alt="" style="margin-top: 20px"></a>
             <a href="life10.html"><img src="images/爸爸、我和風的旅行.png" alt=""></a>
             <a href="life11.html"><img src="images/喀嚓喀擦爺爺的恐龍王國.png" alt=""></a>
-            <a href="life12.html"><img src="images/遊戲場.jpeg" alt="" style="margin-bottom: 90px"></a>
+            <a href="life12.html"><img src="images/遊戲場.jpeg" alt="" style="margin-bottom: 40px"></a>
             <ul>
                 <li><a href="life_page1.html">1</a></li>
                 <li><a href="life_page2.html">2</a></li>
