--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img src="images/logo.png" alt="">
                 <li id="a"><a href="theme.html">主題推薦</a></li>
                 <li id="b"><a href="yearsold.html">適齡推薦</a></li>
-                <li id="c"><a href="bookmap.html">自製童書</a></li>
+                <li id="c"><a href="bookmap.html">說書生</a></li>
                 <li id="d"><a href="aboutus.html">關於我們</a></li>
             </ul>
             <div class="clearfix"></div>
@@ -54,7 +54,7 @@
             <img src="images/footer.png" id="teller" alt="">
             <div id="out">
                 <a href=""><img src="images/ig.png" alt=""></a>
-                <a href=""><img src="images/fb.png" alt=""></a>
+                <a href="https://www.facebook.com/%E8%AA%AA%E6%9B%B8%E7%94%9FTeller-x-%E7%84%A1%E9%99%90%E8%A3%BD-B04-262412077795722/?epa=SEARCH_BOX"  target="_blank"><img src="images/fb.png" alt=""></a>
             </div>
         </div>
     </div>
