白背景與主題探索更正

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="header">
             <ul>
                 <img src="images/logo.png" alt="">
-                <li id="a"><a href="theme.html">主題推薦</a></li>
+                <li id="a"><a href="theme.html">主題探索</a></li>
                 <li id="b"><a href="yearsold.html">適齡推薦</a></li>
                 <li id="c"><a href="bookmap.html">說書生</a></li>
                 <li id="d"><a href="aboutus.html">關於我們</a></li>
