--- a/yearsold_onethree.html
+++ b/yearsold_onethree.html
@@ -31,7 +31,8 @@
             <div class="singleyear"><img src="images/41.jpg" alt="" style="border-radius: 50%;"></div>
             <div class="intro_year">
                <h3 style="text-align: center; font-size: 30px; padding-top: 20px; color: white;">1-3歲</h3>
-                <p>學習生活自理(學走路、上廁所、刷牙等主題)br  
+                <p>學習生活自理(學走路、上廁所、刷牙等主題)
+                <br>  
 有大量物品或與生活息息相關的內容<br>
 開始有自己的想法與主見，具思考能力<br>
 1歲半以後需要大量累積知識、學習基礎<br>
